fix main-nav-list initial visibility

--- a/app/blocks/develop/main-nav-list/main-nav-list.scss
+++ b/app/blocks/develop/main-nav-list/main-nav-list.scss
@@ -24,7 +24,7 @@
     text-align: center;
     background-color: $body-bg;
     opacity: 1;
-    transition-duration: 1s;
+    transition-duration: 0.3s;
     transition-property: opacity;
 
     &--hidden {
